--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-recipy-box",
+  "name": "my-recipe-box",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "type": "module",
