--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
     "react-native-uuid": "^2.0.2",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "expo-font": "~12.0.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
