--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.38",
+    "expo": "51.0.39",
     "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
@@ -62,7 +62,9 @@
     "react-native-svg": "15.2.0",
     "react-native-uuid": "^2.0.2",
     "uuid": "^11.0.2",
-    "expo-font": "~12.0.10"
+    "expo-font": "~12.0.10",
+    "expo-system-ui": "~3.0.7",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
