--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "runtimeVersion": "sdk-51.0.38",
+    "scheme": "my-recipe-box",
     "ios": {
       "supportsTablet": true,
       "splash": {
