--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
     "expo-mail-composer": "~13.0.1",
     "expo-media-library": "^16.0.5",
     "expo-navigation-bar": "~3.0.7",
+    "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -61,12 +63,12 @@
     "react-native-permissions": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-uuid": "^2.0.2",
-    "uuid": "^11.0.2",
-    "react-native-screens": "3.31.1",
-    "expo-router": "~3.5.24",
-    "expo-linking": "~6.3.1"
+    "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
